--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arin Saynere | Data Scientist & ML Engineer</title>
-    <meta name="description" content="Portfolio of Arin Saynere - Data Scientist, Machine Learning Engineer, and AI Enthusiast. Specializing in NLP, IoT, and TinyML applications." />
-    <meta name="author" content="Arin Saynere" />
+    <title>Arin Sayanere | Data Scientist & ML Engineer</title>
+    <meta name="description" content="Portfolio of Arin Sayanere - Data Scientist, Machine Learning Engineer, and AI Enthusiast. Specializing in NLP, IoT, and TinyML applications." />
+    <meta name="author" content="Arin Sayanere" />
 
-    <meta property="og:title" content="Arin Saynere | Data Scientist & ML Engineer" />
-    <meta property="og:description" content="Portfolio of Arin Saynere - Data Scientist, Machine Learning Engineer, and AI Enthusiast." />
+    <meta property="og:title" content="Arin Sayanere | Data Scientist & ML Engineer" />
+    <meta property="og:description" content="Portfolio of Arin Sayanere - Data Scientist, Machine Learning Engineer, and AI Enthusiast." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
